--- a/public/labs/a2/index.css
+++ b/public/labs/a2/index.css
@@ -216,25 +216,30 @@ p#id-selector-2 {
   width: 20%;
   float: left;
 }
-.wd-flex-row-container {
-  display: flex;
-  flex-direction: row;
+
+.wd-bg-color-yellow {
+  background-color: #ffff07;
+}
+.wd-bg-color-blue {
+  background-color: #7070ff;
+}
+.wd-bg-color-red {
+  background-color: #ff7070;
+}
+.wd-bg-color-green {
+  background-color: green;
 }
 
 .wd-flex-row-container {
   display: flex;
   flex-direction: row;
 }
+
 .wd-flex-grow-1 {
   flex-grow: 1;
 }
-.wd-flex-row-container {
-  display: flex;
-  flex-direction: row;
-}
-.wd-flex-grow-1 {
-  flex-grow: 1;
-}
+
 .wd-width-75px {
   width: 75px;
 }
+
