--- a/public/kanbas/assignment2/index.css
+++ b/public/kanbas/assignment2/index.css
@@ -3,18 +3,15 @@ body {
     margin: 0;
     font-family: Arial, sans-serif;
 }
-
-.main-content {
-    margin-left: 85px; /* slightly wider than the sidebar width to avoid overlap */
-}
   
 .sidebar {
     width: 80px; 
     background-color: black;
     height: 100vh; 
     position: fixed; 
-    z-index: 1000;  
+    z-index: 1001; 
 }
+
 
 .sidebar ul {
     list-style-type: none;
@@ -40,6 +37,7 @@ body {
 .sidebar a {
     display: block;
     color: white;
+    text-decoration: none;
     background-color: black;
     text-align: center;
     padding: 5px; /* can vary between 5 and 10 pixels */
@@ -78,4 +76,115 @@ body {
 
 .sidebar li.active i {
     color: red;
+}
+
+.profile-name-label {
+    padding-top: 20px;
+    padding-left: 10px;
+    padding-bottom: 20px;
+    margin-left : 85px;
+    font-size: 20px;
+}
+
+.sidebar a.selected-icon-link {
+    /* Your override styles go here */
+    color: #d41c2d; /* example: override text color */
+    background-color: white; /* example: override background color */
+}
+
+/* Limiting the width of the cards */
+.card {
+    width: 270px; /* Within the range of 250-270px */
+    margin: 15px;
+
+}
+
+/* Setting the links inside cards to have no underline */
+.card-body a {
+    width: auto;
+    text-decoration: none;
+    color: #000; /* Black color for text */
+}
+
+.card-body a:hover {
+    text-decoration: underline; /* Underline on hover */
+}
+
+.main-dashboard-content {
+    max-width: auto; /* Adjust based on your design preference */
+    margin: 0 auto;    /* This centers the container */
+    padding-left: 0;
+    margin-left: 0;
+}
+
+.col-lg-3, .col-md-4, .col-sm-6 {
+    padding-right: 15px; /* This creates 30px spacing between the cards. */
+}
+
+
+
+.row.d-flex.flex-row.flex-wrap {
+    margin-left: -15px;
+    margin-right: -15px;
+}
+
+/* Account Navigation Sidebar Styles */
+.home-sidebar {
+    width: 200px; /* set to the upper limit */
+    background-color: white;
+    height: 100vh;
+    position: fixed;
+    left: 100px; /* the width of the main sidebar + the space in between */
+    z-index: 999; /* should be under the main sidebar if they overlap */
+    text-wrap: wrap;
+}
+
+.home-sidebar ul {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+}
+
+.home-sidebar li {
+    padding: 0;
+    padding-left: 10px; /* space between the border and text */
+    margin: 0;
+    margin-bottom: 17.5px; /* mid-value of the given range */
+    transition: background-color 0.3s;
+}
+
+.home-sidebar li.selected {
+    border-left: 5px solid black;
+    color: black;
+}
+
+.home-sidebar a {
+    text-decoration: none;
+    color: #d41c2d;
+    display: block;
+    padding: 0;
+    word-wrap: break-word;
+}
+
+.home-sidebar .selected a {
+    color: black;
+}
+
+.main-content {
+    margin-left: 300px; 
+}
+
+.home-buttons {
+    display: flex;             /* set the container to flex */
+    justify-content: flex-end; /* align the items to the end (right) */
+    align-items: center;       /* center the items vertically */
+    flex-wrap: nowrap;         /* prevent wrapping of items */
+}
+
+.home-buttons > .btn, .home-buttons > .dropdown {
+    margin-right: 5px;        /* add a little spacing between buttons */
+}
+
+.home-buttons > .btn:last-child, .home-buttons > .dropdown:last-child {
+    margin-right: 0;         /* remove the margin for the last button */
 }
