--- a/src/Kanbas/KanbasNavigation/KanbasNavigationStyles.module.css
+++ b/src/Kanbas/KanbasNavigation/KanbasNavigationStyles.module.css
@@ -36,6 +36,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+  min-height: 100vh;
 }
 
 /* Active background color */
